--- a/shareit/src/main/webapp/editor.html
+++ b/shareit/src/main/webapp/editor.html
@@ -7,6 +7,9 @@
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"
 	media="screen">
 <link href="css/master.css" rel="stylesheet" media="screen">
+<link href="css/editor.css" rel="stylesheet" media="screen">
+<!-- Codemirror stylesheets -->
+<link rel="stylesheet" href="CodeMirror/lib/codemirror.css">
 </head>
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
@@ -16,9 +19,9 @@
 					<a class="brand" href="#">ShareIt</a>
 					<div class="menu nav-collapse collapse">
 						<ul class="nav">
-							<li class="active"><a href="#">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="document.html">New</a></li>
-							<li><a href="editor.html">Retrieve</a></li>
+							<li class="active"><a href="#">Retrieve</a></li>
 							<li><a href="team.html">About Us</a></li>
 						</ul>
 					</div>
@@ -31,33 +34,24 @@
 	<div class="container">
 
 		<div class="features">
-			<div class="ad">
-				<h1>Explore your own text editor!</h1>
-			</div>
-			<div class="sub leftSub c1">
-				<div class="circle">
-					<img src="image/feature1.png" alt="Smiley face" height="100" width="100">
-				</div>
-				<span>Interactive web text editor</span>
+			<div class="notepad">
+					Document ID: <span id="documentId">TestID </span> 
+					<br/> <br/>
+					<textarea id="textEditor" name="code" style="disply:none;"></textarea>
 			</div>
 
-			<div class="sub rightSub c2">
-				<div class="circle">
-					<img src="image/feature2.png" alt="Smiley face" height="300" width="200">
-				</div>
-				<span>Multiple Users</span>
-			</div>
-
-			<div class="sub rightSub c3">
-				<div class="circle">
-					<img src="image/feature3.png" alt="Smiley face" height="180" width="180">
-				</div>
-				<span>Access Everywhere</span>
-			</div>
 		</div>
 	</div>
+
 
 	<!-- Links for javascript files. -->
 	<script src="http://code.jquery.com/jquery.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
+	<script src="js/editor.js"></script>
+	<!-- Code mirror scripts -->
+	<script src="CodeMirror/lib/codemirror.js"></script>
+	<script src="CodeMirror/mode/javascript/javascript.js"></script>
+	<script src="CodeMirror/addon/fold/foldcode.js"></script>
+  	<script src="CodeMirror/addon/fold/foldgutter.js"></script>
+
 </body>
