--- a/shareit/src/main/webapp/team.html
+++ b/shareit/src/main/webapp/team.html
@@ -16,10 +16,10 @@
 					<a class="brand" href="#">ShareIt</a>
 					<div class="menu nav-collapse collapse">
 						<ul class="nav">
-							<li class="active"><a href="#">Home</a></li>
-							<li><a href="document.html">New</a></li>
+							<li ><a href="index.html">Home</a></li>
+							<li><a href="#">New</a></li>
 							<li><a href="editor.html">Retrieve</a></li>
-							<li><a href="team.html">About Us</a></li>
+							<li class="active" ><a href="#">About Us</a></li>
 						</ul>
 					</div>
 				</div>
