Back end code for sync + new doc creation

--- a/shareit/src/main/webapp/editor.html
+++ b/shareit/src/main/webapp/editor.html
@@ -21,20 +21,7 @@
 						<ul class="nav">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="document.html">New</a></li>
-							<!--li class="active"><a href="#">Retrieve</a></li-->
-							<li class="active dropdown"><a data-toggle="dropdown"
-								class="dropdown-toggle" role="button" href="#" id="drop1">Retreive
-									<b class="caret"></b>
-							</a>
-								<ul aria-labelledby="drop1" role="menu" class="dropdown-menu">
-									<li role="presentation">
-										<div class="docIdDiv input-append">
-											<input class="span2" placeholder="Document ID" id="docId"
-												type="text">
-											<button id="docIdBtn" class="btn" type="button">Go!</button>
-										</div>
-									</li>
-								</ul></li>
+							<li class="active"><a href="#">Retrieve</a></li>
 							<li><a href="team.html">About Us</a></li>
 						</ul>
 					</div>
@@ -48,7 +35,10 @@
 
 		<div class="features">
 			<div class="notepad">
-				Document ID: <span id="documentId">TestID </span> <br /> <br />
+				<div id = "docIdDiv" class="input-append">
+					<input class="span2" id="docId" type="text" placeholder="Enter Doc ID">
+					<button class="btn" id = "docIdBtn" type="button">Go!</button>
+				</div>
 				<textarea id="textEditor" name="code" style="disply: none;"></textarea>
 			</div>
 
@@ -56,8 +46,10 @@
 	</div>
 
 	<!-- Links for javascript files. -->
-	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="js/jquery-2.1.3.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
+	<!-- Page related javascript files -->
+	<script src="js/properties.js"></script>
 	<script src="js/editor.js"></script>
 	<script src="js/retrieveDocContents.js"></script>
 	<!-- Code mirror scripts -->
