--- a/shareit/src/main/webapp/index.html
+++ b/shareit/src/main/webapp/index.html
@@ -17,7 +17,7 @@
 					<div class="menu nav-collapse collapse">
 						<ul class="nav">
 							<li class="active"><a href="#">Home</a></li>
-							<li><a href="document.html">New</a></li>
+							<li><a href="new.html">New</a></li>
 							<li><a href="editor.html">Retrieve</a></li>
 							<li><a href="team.html">About Us</a></li>
 						</ul>
