--- a/shareit/src/main/webapp/team.html
+++ b/shareit/src/main/webapp/team.html
@@ -17,7 +17,7 @@
 					<div class="menu nav-collapse collapse">
 						<ul class="nav">
 							<li ><a href="index.html">Home</a></li>
-							<li><a href="#">New</a></li>
+							<li><a href="new.html">New</a></li>
 							<li><a href="editor.html">Retrieve</a></li>
 							<li class="active" ><a href="#">About Us</a></li>
 						</ul>
